# kintai-agent

./: README.md  attendance_agent_spec.md
attendance-agent/: .env.example  .gitignore  config.yaml  main.py  pyproject.toml
attendance-agent/graph/: graph.py  state.py
attendance-agent/graph/nodes/: calendar_check_node.py  slack_notify_node.py  stamp_node.py  state_update_node.py  time_gate_node.py  working_state_node.py
attendance-agent/schedulers/: scheduler.py
attendance-agent/services/: attendance_browser.py  config_loader.py  dummy_stamper.py  google_calendar.py  pc_monitor.py  slack_client.py  stamper_interface.py
attendance-agent/tests/: test_calendar_check.py  test_calendar_check_node.py  test_config_loader.py  test_dummy_stamper.py  test_graph.py  test_pc_monitor.py  test_scheduler.py  test_slack_client.py  test_slack_notify_node.py  test_stamp.py  test_stamp_node.py  test_state.py  test_state_update_node.py  test_time_gate.py  test_working_state.py
docs/: ARCHITECTURE.md  FAQ.md  HANDOVER.md  KNOWN_ISSUES.md  TROUBLESHOOTING.md
docs/plans/: 2026-02-22-attendance-agent.md
