[project]
name = "attendance-agent"
version = "0.1.0"
description = "PC稼働監視 + 自動打刻 LangGraphエージェント"
requires-python = ">=3.10"
dependencies = [
    "langgraph>=0.2.0",
    "pynput>=1.7.6",
    "playwright>=1.40.0",
    "apscheduler>=3.10.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "slack-sdk>=3.27.0",
    "google-api-python-client>=2.100.0",
    "google-auth-oauthlib>=1.2.0",
    "jpholiday>=0.1.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.12.0",
]

[tool.setuptools.packages.find]
include = ["graph*", "services*", "schedulers*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
